fixing description that covered user email input field

--- a/css/ding_zerohit_form.css
+++ b/css/ding_zerohit_form.css
@@ -41,7 +41,7 @@
   }
 
 #ting-result .webform-component-textfield .form-description, 
-#ting-result .webform-component-email .form-description {
+#ting-result #webform-component-user-email .form-description {
   width: 45%;
   }
 
